# comp445_httpc

./: .gitignore  CMakeLists.txt  README.md  meson.build
include/: file_reader.h  header.h  help.h  options.h  request.h  response.h  types.h  url.h  util.h
src/: file_reader.c  file_reader.h  get.c  get.h  header.c  header.h  help.c  help.h  main.c  options.h  post.c  post.h  request.c  request.h  response.c  response.h  tests.c  types.h  url.c  url.h  util.c  util.h
